# TurtleBot

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
bot/: turtle.py
turtlebot/: __main__.py  bot.py  log.py  parser.py  turtle.py
